refactor(admin): update admin structure, and adding url internationalization

--- a/web/admin/src/main/resources/templates/index.html
+++ b/web/admin/src/main/resources/templates/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
     <h1>GoBuy admin panel</h1>
-    <a th:href="@{/users}">Users</a>
+    <a th:href="@{/users}" th:text="#{users}"></a>
 </body>
 </html>
