--- a/web/admin/src/main/resources/templates/user_form.html
+++ b/web/admin/src/main/resources/templates/user_form.html
@@ -77,6 +77,7 @@
             <div class="form-group row mb-2">
                 <label class="col-3 col-form-label" for="fileImage" th:text="#{user-image}"></label>
                 <div class="col-9">
+                    <input type="hidden" th:field="*{photo}">
                     <div class="form-check">
                         <input type="file"
                                accept="image/png,image/jpeg,image/jpg"
@@ -85,7 +86,8 @@
                                th:value="${user.photo}"
                                class="mr-2 mb-2"
                         >
-                        <img id="thumbnail" alt="Photo Previews" th:src="@{${user.imagePath}}" class="img-fluid">
+                        <img id="thumbnail" alt="Photo Previews" th:src="@{${user.imagePath}}" class="img-fluid"
+                             style="height: 200px">
                     </div>
                 </div>
             </div>
@@ -160,6 +162,8 @@
             return true;
         }
     }
+
+
 
 
 
