--- a/web/admin/src/main/resources/templates/users.html
+++ b/web/admin/src/main/resources/templates/users.html
@@ -30,7 +30,7 @@
 </div>
 
 
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover justify-content-center my-3">
     <thead class="thead-light">
     <tr>
         <th>#</th>
@@ -48,7 +48,7 @@
         <td>[[${user.fullName}]]</td>
         <td>[[${user.email}]]</td>
         <td>
-            <img style="width: 150px" th:src="@{${user.imagePath}}" th:alt="${user.fullName}">
+            <img style="height: 150px" th:src="@{${user.imagePath}}" th:alt="${user.fullName}">
         </td>
         <td>
             <form th:id="${'toggle-status-' + user.id}"
@@ -86,6 +86,25 @@
     </tr>
     </tbody>
 </table>
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${currPage <= 1 ? 'disabled' : ''}">
+            <a class="page-link"
+               th:href="@{'/users' + '?page=' + ${currPage-1}}">Previous</a>
+        </li>
+
+        <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
+            th:classappend="${currPage == i ? 'active' : ''}">
+            <a class="page-link"
+               th:href="@{'/users' + '?page=' + ${i}}">[[${i}]]</a>
+        </li>
+
+        <li class="page-item" th:classappend="${currPage >= totalPages ? 'disabled' : ''}">
+            <a class="page-link"
+               th:href="@{'/users' + '?page=' + ${currPage+1}}">Next</a>
+        </li>
+    </ul>
+</nav>
 
 <script type="text/javascript">
     function deleteUser(form) {
@@ -104,6 +123,45 @@
             form.submit();
         })
     })
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
