--- a/web/admin/src/main/resources/templates/users.html
+++ b/web/admin/src/main/resources/templates/users.html
@@ -1,111 +1,86 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, minimum-scaled=1.0" name="viewport">
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="base/page/main :: html(~{::title}, ~{::link}, ~{::body})">
+<title th:text="#{users}"></title>
+<link>
+<body th:replace="base/page/body :: body(~{::main}, ~{::script})">
+<main>
+    <a th:href="@{/users/new}" type="button" class="btn btn-link" data-mdb-ripple-color="dark"
+       th:text="#{create-new-user}"></a>
+    <table class="table align-middle mb-0 bg-white">
+        <thead class="bg-light">
+        <tr>
+            <th>#</th>
+            <th scope="col" th:text="#{name}"></th>
+            <th scope="col" th:text="#{role}"></th>
+            <th scope="col" th:text="#{account-status}"></th>
+            <th scope="col" th:text="#{actions}"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <th scope="row">[[${user.id}]]</th>
+            <td>
+                <div class="d-flex align-items-center">
+                    <img
+                            th:src="@{${user.imagePath}}" th:alt="${user.fullName}"
+                            style="width: 45px; height: 45px"
+                            class="rounded-circle"
+                    />
+                    <div class="ms-3">
+                        <p class="fw-bold mb-1">[[${user.fullName}]]</p>
+                        <p class="text-muted mb-0">[[${user.email}]]</p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <p class="fw-normal mb-1">[[${user.roles}]]</p>
+            </td>
+            <td>
+                <span class="badge rounded-pill d-inline"
+                      th:classappend="${user.enabled} ? badge-success : badge-danger"
+                      th:text="active"></span>
+            </td>
+            <td>
+                <a th:href="@{|/users/edit/${user.id}|}" class="btn btn-outline-primary btn-sm btn-rounded"
+                   th:text="#{edit}"></a>
 
-    <title>[[${title}]]</title>
+                <div>
+                    <form id="delete-user"
+                          th:action="@{|/users/delete/${user.id}|}"
+                          th:object="${user}"
+                          th:method="DELETE"
+                          onsubmit="return deleteUser(this)"
+                    >
+                        <input type="hidden" name="id" th:value="*{id}">
+                    </form>
+                    <button type="submit" class="btn btn-outline-danger btn-sm btn-rounded" form="delete-user"
+                            th:text="#{delete}"></button>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div aria-label="users pagination" class="mt-2">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${currPage <= 1 ? 'disabled' : ''}">
+                <a class="page-link"
+                   th:href="${@replaceOrAddParam.apply('page', currPage-1)}">Previous</a>
+            </li>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <!--    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />-->
-    <!--    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />-->
-    <!--    <script type="text/javascript" th:src="@{/js/common.js}"></script>-->
+            <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
+                th:classappend="${currPage == i ? 'active' : ''}">
+                <a class="page-link"
+                   th:href="${@replaceOrAddParam.apply('page', i)}">[[${i}]]</a>
+            </li>
 
-    <title>Admin Panel | Users</title>
-</head>
-<body class="container-fluid">
+            <li class="page-item" th:classappend="${currPage >= totalPages ? 'disabled' : ''}">
+                <a class="page-link"
+                   th:href="${@replaceOrAddParam.apply('page', currPage+1)}">Next</a>
+            </li>
+        </ul>
+    </div>
 
-<h1 th:text="#{users}"></h1>
-<a th:href="@{/users/new}" class="btn btn-success" th:text="#{create-new-user}"></a>
-
-
-<div th:if="${error != null}" class="alert alert-danger text-centered" role="alert">
-    [[${error}]]
-</div>
-
-<div th:if="${message != null}" class="alert alert-success text-centered" role="alert">
-    [[${message}]]
-</div>
-
-
-<table class="table table-bordered table-hover justify-content-center my-3">
-    <thead class="thead-light">
-    <tr>
-        <th>#</th>
-        <th scope="col" th:text="#{name}"></th>
-        <th scope="col" th:text="#{email}"></th>
-        <th scope="col" th:text="#{image}"></th>
-        <th scope="col" th:text="#{account-status}"></th>
-        <th scope="col" th:text="#{role}"></th>
-        <th scope="col" th:text="#{actions}"></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <th scope="row">[[${user.id}]]</th>
-        <td>[[${user.fullName}]]</td>
-        <td>[[${user.email}]]</td>
-        <td>
-            <img style="height: 150px" th:src="@{${user.imagePath}}" th:alt="${user.fullName}">
-        </td>
-        <td>
-            <form th:id="${'toggle-status-' + user.id}"
-                  th:action="@{'/users/update-status/' + ${user.id}}"
-                  th:object="${user}"
-                  th:method="PUT"
-            >
-                <input type="hidden" name="enabled" th:value="*{!enabled}">
-            </form>
-            <div class="form-check form-switch">
-                <input
-                        class="form-check-input enable-switch"
-                        type="checkbox"
-                        role="switch"
-                        th:attr="data-id=${'toggle-status-' + user.id}"
-                        th:id="${user.id + '-enable'}"
-                        th:value="${user.enabled}"
-                        th:checked="${user.enabled}"
-                >
-            </div>
-        </td>
-        <td>[[${user.roles}]]</td>
-        <td>
-            <form id="delete-user"
-                  th:action="@{'/users/delete/' + ${user.id}}"
-                  th:object="${user}"
-                  th:method="DELETE"
-                  onsubmit="return deleteUser(this)"
-            >
-                <input type="hidden" name="id" th:value="*{id}">
-            </form>
-            <a th:href="@{'/users/edit/' + ${user.id}}" class="btn btn-primary" th:text="#{edit}"></a>
-            <button type="submit" class="btn btn-danger" form="delete-user" th:text="#{delete}"></button>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-        <li class="page-item" th:classappend="${currPage <= 1 ? 'disabled' : ''}">
-            <a class="page-link"
-               th:href="@{'/users' + '?page=' + ${currPage-1}}">Previous</a>
-        </li>
-
-        <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
-            th:classappend="${currPage == i ? 'active' : ''}">
-            <a class="page-link"
-               th:href="@{'/users' + '?page=' + ${i}}">[[${i}]]</a>
-        </li>
-
-        <li class="page-item" th:classappend="${currPage >= totalPages ? 'disabled' : ''}">
-            <a class="page-link"
-               th:href="@{'/users' + '?page=' + ${currPage+1}}">Next</a>
-        </li>
-    </ul>
-</nav>
-
+</main>
 <script type="text/javascript">
     function deleteUser(form) {
         const ok = confirm("Do you want to delete this record");
@@ -123,27 +98,6 @@
             form.submit();
         })
     })
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
