--- a/web/admin/src/main/resources/static/public/styles/theme.css
+++ b/web/admin/src/main/resources/static/public/styles/theme.css
@@ -1,6 +1,8 @@
 body {
   background-color: #fbfbfb;
+  overflow-x: hidden;
 }
+
 @media (min-width: 991.98px) {
   main {
     padding-left: 240px;
