--- a/web/admin/src/main/resources/templates/base/page/body.html
+++ b/web/admin/src/main/resources/templates/base/page/body.html
@@ -1,10 +1,13 @@
 <body th:fragment="body(main, scripts)" class="fixed-sn light-blue-skin" xmlns:th="http://www.thymeleaf.org">
 <header th:replace="/base/page/header :: header"></header>
-<div style="margin-top: 65px">
+<div style="margin-top: 90px">
     <div class="container-fluid m-1">
         <th:block th:replace="${main}"></th:block>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.slim.min.js"
+        integrity="sha512-yBpuflZmP5lwMzZ03hiCLzA94N0K2vgBtJgqQ2E1meJzmIBfjbb7k4Y23k2i2c/rIeSUGc7jojyIY5waK3ZxCQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
 <script type="text/javascript" th:src="@{/public/js/theme.js}"></script>
 <th:block th:replace="${scripts}"/>
