--- a/web/admin/src/main/resources/templates/index.html
+++ b/web/admin/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       th:replace="base/page/main :: html(~{::title}, ~{::link}, ~{::body})">
-<title></title>
+<title th:text="|#{GoBuy} ${'|'} #{admin-panel}|"></title>
 <link>
 <body th:replace="base/page/body :: body(~{::main}, ~{})">
 <main>
