--- a/web/admin/src/main/resources/templates/login.html
+++ b/web/admin/src/main/resources/templates/login.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" th:lang="#{locale}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
+    <meta content="width=device-width, initial-scale=1.0 minimum-scale=1.0" name="viewport">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/public/styles/theme.css}"/>
+    <link rel="stylesheet" th:href="@{/public/styles/login.css}"/>
+    <title th:text="|#{GoBuy} ${'|'} #{login}|"></title>
 </head>
-<body>
-
+<body class="row d-flex align-items-center">
+<main class="p-0 flex-grow-1 align-items-center">
+    <div class="row d-flex justify-content-center align-items-center">
+        <form class="col-lg-4 col-md-6 col-sm-8 p-lg-4 p-md-4">
+            <div class="col d-flex align-items-center justify-content-center mt-2 mb-5">
+                <img th:src="@{/public/images/gobuy.png}" alt="#{gobuy-logo}">
+            </div>
+            <div class="form-outline mb-4">
+                <input type="email" name="email" id="email" class="form-control" th:placeholder="#{enter-password}"/>
+                <label class="form-label" for="email" th:text="#{email}"></label>
+            </div>
+            <div class="form-outline mb-4">
+                <input type="password" name="password" id="password" class="form-control"
+                       th:placeholder="#{enter-password}"/>
+                <label class="form-label" for="password" th:text="#{password}"></label>
+            </div>
+            <div class="row mb-4">
+                <div class="col d-flex">
+                    <div class="form-check">
+                        <input class="form-check-input" name="rememberMe" type="checkbox" value="" id="remember-me"
+                               checked/>
+                        <label class="form-check-label" for="remember-me" th:text="#{remember-me}"></label>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block mb-4" th:text="#{login}"></button>
+        </form>
+    </div>
+</main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.slim.min.js"
+        integrity="sha512-yBpuflZmP5lwMzZ03hiCLzA94N0K2vgBtJgqQ2E1meJzmIBfjbb7k4Y23k2i2c/rIeSUGc7jojyIY5waK3ZxCQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
 </body>
 </html>
