--- a/web/admin/src/main/resources/templates/base/page/body.html
+++ b/web/admin/src/main/resources/templates/base/page/body.html
@@ -5,6 +5,7 @@
         <th:block th:replace="${main}"></th:block>
     </div>
 </div>
+<footer th:replace="/base/page/footer :: footer"></footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.slim.min.js"
         integrity="sha512-yBpuflZmP5lwMzZ03hiCLzA94N0K2vgBtJgqQ2E1meJzmIBfjbb7k4Y23k2i2c/rIeSUGc7jojyIY5waK3ZxCQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
