--- a/web/admin/src/main/resources/templates/base/page/main.html
+++ b/web/admin/src/main/resources/templates/base/page/main.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:fragment="html(title, links, body)" th:lang="#{locale}">
+<html xmlns:th="https://www.thymeleaf.org"
+      th:fragment="html(title, links, body)" th:lang="#{locale}"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
 <head>
     <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0 minimum-scale=1.0" name="viewport">
