update(admin) working redis session

--- a/web/admin/src/main/resources/templates/login.html
+++ b/web/admin/src/main/resources/templates/login.html
@@ -46,7 +46,7 @@
             <div class="row mb-4">
                 <div class="col d-flex">
                     <div class="form-check">
-                        <input class="form-check-input" name="rememberMe" type="checkbox" value="" id="remember-me"
+                        <input class="form-check-input" name="remember-me" type="checkbox" value="" id="remember-me"
                                checked/>
                         <label class="form-check-label" for="remember-me" th:text="#{remember-me}"></label>
                     </div>
