--- a/web/admin/src/main/resources/static/public/styles/login.css
+++ b/web/admin/src/main/resources/static/public/styles/login.css
@@ -3,6 +3,10 @@ body {
     height: 100vh !important;
 }
 
+main {
+    padding: 30px;
+}
+
 form {
     border-radius: 10px !important;
     border: 1px solid #ddd !important;
